# facebook-chat-api-python

./: .gitignore  LICENSE  README.md  example_appstate.py  main.py  pyproject.toml  test_sdk.py
.github/workflows/: pypi.yml
docs/: authentication.md  groups.md  messaging.md
examples/: appstate_login.py  echo_bot.py
src/core/: api.py  core.py  mqtt.py
src/fca/: __init__.py  main.py
src/fca/core/: api.py  mqtt.py
src/fca_python/: __init__.py  api.py  core.py  main.py  mqtt.py  utils.py
src/graphql/: change_thread_color.py  formatter.py  get_thread_history.py  get_thread_info.py  get_thread_list.py  get_thread_theme.py  search_friends.py  search_stickers.py  set_active_status.py  set_message_reaction.py  set_thread_theme.py  suggest_friend.py
src/http/: add_user_to_group.py  change_admin_status.py  change_archived_status.py  change_avatar.py  change_bio.py  change_blocked_status.py  change_cover.py  change_name.py  change_nickname.py  change_thread_emoji.py  change_username.py  create_comment_post.py  create_poll.py  create_post.py  delete_message.py  delete_thread.py  follow.py  forward_attachment.py  get_access.py  get_avatar_user.py  get_friends_list.py  get_region.py  get_thread_pictures.py  get_user_id.py  get_user_info.py  handle_friend_request.py  handle_message_request.py  logout.py  mark_as_delivered.py  mark_as_read.py  mark_as_read_all.py  mark_as_seen.py  mute_thread.py  note.py  refresh_fb_dtsg.py  remove_suspicious_account.py  remove_user_from_group.py  resolve_photo_url.py  search_for_thread.py  send_friend_request.py  (+13 more)
src/utils/: utils.py
(+49 files in other folders)
